and fixed hd submenu font size and top spacing

--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -174,6 +174,7 @@
           }
         }
       }
+      font-size: font-sizes-md(h3);  
     }
 
     #logo {
@@ -289,11 +290,7 @@
       .sub-menu {
         .sub-menu-top-space {
           height: vert-heights-quarter(lg);
-          
-          
-          
           .close-x {
-            cursor: pointer;
             margin-top: 4vw;
             margin-right: 4vw;
             img {
@@ -369,6 +366,14 @@
             }
           }}
         }
+        .sub-menu {
+          .sub-menu-top-space {
+            height: vert-heights-quarter(xl);
+          }
+          top: vert-heights(xl);
+          font-size: font-sizes-xl(h3);
+        }
+      
         .bg-illu {
           width: 600px;
           position: absolute;
