--- a/scss/main.css
+++ b/scss/main.css
@@ -243,6 +243,9 @@ table {
   nav .burger img {
     width: 30px;
   }
+  .sub-menu {
+    font-size: 2.14vw;
+  }
   .sub-menu .sub-menu-top-space {
     height: 120px;
   }
@@ -368,7 +371,6 @@ table {
     height: 30px;
   }
   .sub-menu .sub-menu-top-space .close-x {
-    cursor: pointer;
     margin-top: 4vw;
     margin-right: 4vw;
   }
@@ -429,6 +431,13 @@ table {
   }
   nav #menu-left ul .leistungen .nupsie {
     height: 10px;
+  }
+  .sub-menu {
+    top: 180px;
+    font-size: 30px;
+  }
+  .sub-menu .sub-menu-top-space {
+    height: 45px;
   }
   .bg-illu {
     width: 600px;
